# docker-netflix-scraper

./: .env.example  Dockerfile  README.md  docker scraper copilot plan of attack.md  docker scraper plan enhanced.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  db.py  embeddings.py  omdb.py  scheduler.py  tmdb.py  youtube.py
